@@ -5,8 +5,27 @@
 	<groupId>com.sap.timp</groupId>
 	<artifactId>TimpTesting</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.6</version>
+
+				<configuration>
+
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+
+				</configuration>
+			</plugin>
+
+		</plugins>
 
 
+	</build>
 	<dependencies>
 
 		<dependency>
@@ -19,7 +38,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.8</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
@@ -29,40 +48,9 @@
 			<version>2.5</version>
 		</dependency>
 
-
-
-		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
-		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-resources-plugin</artifactId>
-			<version>2.5</version>
-
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-install-plugin -->
-		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-install-plugin</artifactId>
-			<version>2.3.1</version>
-		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugins</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<forkCount>3</forkCount>
-					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m-XX:MaxPermSize=256</argLine>
-				</configuration>
 
 
-			</plugin>
-		</plugins>
-
-	</build>
 
 </project>
